--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿<link href="~/css/sizequery.css" rel="stylesheet" />
+@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="madimi-one-regular font-size-h1 text-center my-5">TI PROTEGGEREMO NOI</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="d-flex justify-content-center">
+    <img src="https://i.ytimg.com/vi/SBoN5zGazvA/sddefault.jpg" />
+</div>
+<p class="madimi-one-regular text-center my-5">CON NOI LA TUA PRIVACY E' AL SICURO</p>
+
