--- a/Views/Query/DieciOPiu.cshtml
+++ b/Views/Query/DieciOPiu.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿<link href="~/css/sizequery.css" rel="stylesheet" />
+
+@{
     ViewData["Title"] = "Punti decurtati 11 o piu";
 }
 
-<h1 class="text-center my-4 madimi-one-regular">Punti decurtati 11 o piu</h1>
+<h1 class="text-center my-4 madimi-one-regular font-size-h1">Punti decurtati 11 o piu</h1>
 
 @if (Model is null)
 {
