--- a/Views/Query/Saldo.cshtml
+++ b/Views/Query/Saldo.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿<link href="~/css/sizequery.css" rel="stylesheet" />
+
+@{
     ViewData["Title"] = "Verbali con importo maggiore di 400 euro";
 }
 
-<h1 class="text-center my-4 madimi-one-regular">Verbali con importo maggiore di 400 euro</h1>
+<h1 class="text-center my-4 madimi-one-regular font-size-h1">Verbali con importo maggiore di 400 euro</h1>
 
 @if (Model is null)
 {
