--- a/Views/Query/VerbaliTrasgre.cshtml
+++ b/Views/Query/VerbaliTrasgre.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿<link href="~/css/sizequery.css" rel="stylesheet" />
+
+@{
     ViewData["Title"] = "Numero verabli per trasgressore";
 }
 
-<h1 class="text-center my-4 madimi-one-regular">Numero verabli per trasgressore</h1>
+<h1 class="text-center my-4 madimi-one-regular font-size-h1">Numero verabli per trasgressore</h1>
 
 @if (Model is null)
 {
