--- a/Views/Home/Add.cshtml
+++ b/Views/Home/Add.cshtml
@@ -1,38 +1,39 @@
-﻿@{
+﻿<link href="~/css/addverbale.css" rel="stylesheet" />
+@{
     ViewData["Title"] = "Aggiungi Verbale";
 }
 @model Verbale
 
-<h1 class="text-center my-4">Aggiungi Verbale</h1>
+<h1 class="text-center my-4 font-size-h1 madimi-one-regular">Aggiungi Verbale</h1>
 
 <form class="row g-3" asp-controller="Home" asp-action="Add" method="post">
     <div class="col-6">
-        <label asp-for="@Model.DataViolazione" class="form-label">Data Violazione:</label>
-        <input type="date" class="form-control" asp-for="@Model.DataViolazione">
+        <label asp-for="@Model.DataViolazione" class="form-label madimi-one-regular size-font">Data Violazione:</label>
+        <input type="date" class="form-control" asp-for="@Model.DataViolazione" required>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.DataTrascrizioneVerbale" class="form-label">Data Trascrizione Verbale:</label>
-        <input type="date" class="form-control" asp-for="@Model.DataTrascrizioneVerbale">
+        <label asp-for="@Model.DataTrascrizioneVerbale" class="form-label madimi-one-regular size-font">Data Trascrizione Verbale:</label>
+        <input type="date" class="form-control" asp-for="@Model.DataTrascrizioneVerbale" required>
     </div>
     <div class="col-12">
-        <label asp-for="@Model.IndirizzoViolazione" class="form-label">Indirizzo: </label>
-        <input type="text" class="form-control" asp-for="@Model.IndirizzoViolazione">
+        <label asp-for="@Model.IndirizzoViolazione" class="form-label madimi-one-regular size-font">Indirizzo: </label>
+        <input type="text" class="form-control" asp-for="@Model.IndirizzoViolazione" required>
     </div>
     <div class="col-3">
-        <label asp-for="@Model.Importo" class="form-label">Importo multa:</label>
-        <input type="number" class="form-control" asp-for="@Model.Importo">
+        <label asp-for="@Model.Importo" class="form-label madimi-one-regular size-font">Importo multa:</label>
+        <input type="number" class="form-control" asp-for="@Model.Importo" required>
     </div>
     <div class="col-3">
-        <label asp-for="@Model.DecurtamentoPunti" class="form-label">Punti decurtati: </label>
-        <input type="number" class="form-control" asp-for="@Model.DecurtamentoPunti">
+        <label asp-for="@Model.DecurtamentoPunti" class="form-label madimi-one-regular size-font">Punti decurtati: </label>
+        <input type="number" class="form-control" asp-for="@Model.DecurtamentoPunti" required>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.Nominativo_Agente" class="form-label">Nominativo agente</label>
-        <input type="text" class="form-control" asp-for="@Model.Nominativo_Agente">
+        <label asp-for="@Model.Nominativo_Agente" class="form-label madimi-one-regular size-font">Nominativo agente</label>
+        <input type="text" class="form-control" asp-for="@Model.Nominativo_Agente" required>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.IDAnagrafica" class="form-label"></label>
-        <select id="inputState" class="form-select" asp-for="@Model.IDAnagrafica">
+        <label asp-for="@Model.IDAnagrafica" class="form-label madimi-one-regular size-font"></label>
+        <select id="inputState" class="form-select" asp-for="@Model.IDAnagrafica" required>
             <option selected></option>
             @foreach (var utente in ViewBag.Utenti)
             {
@@ -41,8 +42,8 @@
         </select>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.IDViolazione" class="form-label"></label>
-        <select id="inputState" class="form-select" asp-for="@Model.IDViolazione">
+        <label asp-for="@Model.IDViolazione" class="form-label madimi-one-regular size-font"></label>
+        <select id="inputState" class="form-select" asp-for="@Model.IDViolazione" required>
             <option selected></option>
             @foreach (var violazione in ViewBag.Violazioni)
             {
@@ -52,7 +53,7 @@
     </div>
     <div class="d-flex justify-content-center">
         <div>
-            <button type="submit" class="btn btn-primary">Aggiungi multa</button>
+            <button type="submit" class="btn btn-success madimi-one-regular size-button">Aggiungi multa</button>
         </div>
     </div>
 </form>
