--- a/Views/Home/AddAnagrafica.cshtml
+++ b/Views/Home/AddAnagrafica.cshtml
@@ -1,38 +1,40 @@
-﻿@{
+﻿<link href="~/css/addanagrafica.css" rel="stylesheet" />
+
+@{
     ViewData["Title"] = "Aggiungi anagrafica dell'infame che ha violato la legge";
 }
 @model Anagrafica
 
-<h1 class="text-center my-4">Aggiungi anagrafica dell'infame che ha violato la legge</h1>
+<h1 class="text-center my-4 madimi-one-regular font-size-h1">Aggiungi anagrafica dell'infame che ha violato la legge</h1>
 
 <form class="row g-3" asp-controller="Home" asp-action="AddAnagrafica" method="post">
     <div class="col-6">
-        <label asp-for="@Model.Nome" class="form-label">Nome:</label>
-        <input type="text" class="form-control" asp-for="@Model.Nome">
+        <label asp-for="@Model.Nome" class="form-label madimi-one-regular size-font">Nome:</label>
+        <input type="text" class="form-control" asp-for="@Model.Nome" required>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.Cognome" class="form-label">Cognome:</label>
-        <input type="text" class="form-control" asp-for="@Model.Cognome">
+        <label asp-for="@Model.Cognome" class="form-label madimi-one-regular size-font">Cognome:</label>
+        <input type="text" class="form-control" asp-for="@Model.Cognome" required>
     </div>
     <div class="col-12">
-        <label asp-for="@Model.Indirizzo" class="form-label">Indirizzo: </label>
-        <input type="text" class="form-control" asp-for="@Model.Indirizzo">
+        <label asp-for="@Model.Indirizzo" class="form-label madimi-one-regular size-font">Indirizzo: </label>
+        <input type="text" class="form-control" asp-for="@Model.Indirizzo" required>
     </div>
     <div class="col-3">
-        <label asp-for="@Model.Citta" class="form-label">Citta':</label>
-        <input type="text" class="form-control" asp-for="@Model.Citta">
+        <label asp-for="@Model.Citta" class="form-label madimi-one-regular size-font">Citta':</label>
+        <input type="text" class="form-control" asp-for="@Model.Citta" required>
     </div>
     <div class="col-3">
-        <label asp-for="@Model.CAP" class="form-label">CAP: </label>
-        <input type="text" class="form-control" asp-for="@Model.CAP" maxlength="5" min="5">
+        <label asp-for="@Model.CAP" class="form-label madimi-one-regular size-font">CAP: </label>
+        <input type="text" class="form-control" asp-for="@Model.CAP" maxlength="5" min="5" required>
     </div>
     <div class="col-6">
-        <label asp-for="@Model.Cod_Fisc" class="form-label">Codice Fiscale</label>
-        <input type="text" class="form-control" asp-for="@Model.Cod_Fisc" maxlength="16" min="16">
+        <label asp-for="@Model.Cod_Fisc" class="form-label madimi-one-regular size-font">Codice Fiscale</label>
+        <input type="text" class="form-control" asp-for="@Model.Cod_Fisc" maxlength="16" min="16" required>
     </div>
     <div class="d-flex justify-content-center">
         <div>
-            <button type="submit" class="btn btn-primary">Aggiungi criminale</button>
+            <button type="submit" class="btn btn-primary madimi-one-regular size-button size-font">Aggiungi criminale</button>
         </div>
     </div>
 </form>
