--- a/wwwroot/css/AddAnagrafica.css
+++ b/wwwroot/css/AddAnagrafica.css
@@ -3,6 +3,17 @@
     font-weight: 400;
     font-style: normal;
 }
+
 .font-size-h1 {
     font-size: 5em
+}
+
+.size-button {
+    width: 300px;
+    height: 80px;
+    font-size: 2em;
+}
+
+.size-font {
+    font-size: 1.3em;
 }
