--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,6 +19,7 @@ html {
 
 body {
     margin-bottom: 60px;
+    padding-top: 85px;
 }
 .Bg-nav-color {
     background-color: #90F08C;
@@ -31,15 +32,13 @@ body {
     font-weight: 400;
     font-style: normal;
 }
-body{
-    padding-top:85px;
-}
 .font-size-nav{
     font-size:1.3em
 }
 img:hover {
     transform: scale(1.3);
     transition: transform 1.3s;
+    cursor:pointer
 }
 .nav-color-bg-drop:hover {
     background-color: transparent;
