--- a/Views/Home/Anagrafica.cshtml
+++ b/Views/Home/Anagrafica.cshtml
@@ -1,10 +1,11 @@
-﻿@{
+﻿<link href="~/css/site.css" rel="stylesheet" />
+@{
     ViewData["Title"] = "Dettagli anagrafica";
 }
 
 <h1 class="text-center my-4 madimi-one-regular font-size-h1 py-5">Dettagli anagrafica</h1>
 <div class="d-flex justify-content-center madimi-one-regular">
-    <div class="card mb-3">
+    <div class="card mb-3 bg-color-card border border-0">
         <div class="row g-0">
             <div class="col-4">
                 <img src="https://media.stickerswiki.app/memepolice/147451.512.webp" class="img-fluid rounded-start" alt="propic">
