Aggiunta funzionalita' edit nome trasgressore

--- a/Views/Home/AddAnagrafica.cshtml
+++ b/Views/Home/AddAnagrafica.cshtml
@@ -34,7 +34,7 @@
     </div>
     <div class="d-flex justify-content-center">
         <div>
-            <button type="submit" class="btn btn-primary madimi-one-regular size-button size-font">Aggiungi criminale</button>
+            <button type="submit" class="btn btn-success madimi-one-regular size-button">Aggiungi criminale</button>
         </div>
     </div>
 </form>
