--- a/Views/Home/Anagrafica.cshtml
+++ b/Views/Home/Anagrafica.cshtml
@@ -21,3 +21,6 @@
         </div>
     </div>
 </div>
+<div class="d-flex justify-content-center">
+    <a class="btn btn-outline-success" asp-controller="Home" asp-action="Edit" asp-route-id="@Model.IDAnagrafica">Modifica Anagrafica del criminale</a>
+</div>
